fix news layout issue by setting min-height

--- a/app/assets/stylesheets/v2/home.less
+++ b/app/assets/stylesheets/v2/home.less
@@ -963,6 +963,7 @@
       padding-right: 0;
       padding-left: 0;
       width: 300px;
+      min-height: 50px;
       margin-left: 60px;
       a {
         color: #999999;
